main.css
/* ... */
.project-icon:hover {
  opacity: 1;
}

.project-icon-image:focus {
  outline: none;
}

.project-icon-image {
  max-width: 100%;
  max-height: 100%;
  outline-width: 1px;
  border-color: black;
  border-radius: 16px;
}

#_title {
  padding-top: 50px;
  height: 850px;
  color: #fff;
  background-color: none;
}

#nova {
  padding-top: 50px;
  height: 1000px;
  color: #fff;
  background-color: #1B1B1B;
}

#pattern {
  padding-top: 50px;
  height: 1000px;
  color: #fff;
  background-color: #1B1B1B;
}

#nutrition-vision {
  padding-top: 50px;
  height: 1000px;
  color: #fff;
  background-color: #1B1B1B;
}

#drothfeld-cloud-portfolio {
  padding-top: 50px;
  height: 1000px;
  color: #fff;
  background-color: #1B1B1B;
}

.scroll-down-arrows {
  display: absolute;
  margin-top: 790px;
}

.scroll-arrow {
  display: inline;
  margin-left: 435px;
}

.scroll-arrow-image {
  height: 50px;
  width: 60px;
}

.animated {
  animation-duration: 1s;
  animation-fill-mode: both;
}

.animated.infinite {
  animation-iteration-count: infinite;
}

.animated.hinge {
  animation-duration: 2s;
}

@keyframes bounce {
  from, 20%, 53%, 80%, to {
    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
    transform: translate3d(0,0,0);
  }

  40%, 43% {
    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    transform: translate3d(0, -15px, 0);
  }

  70% {
    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    transform: translate3d(0, -7.5px, 0);
  }

  90% {
    transform: translate3d(0,-2px,0);
  }
}

.bounce {
  animation-name: bounce;
  transform-origin: center bottom;
}

.project-title {
  position: relative;
  color: #F2F2F2;
  font-size: 30px;
  font-weight: bold;
  margin-left: 115px;
  top: -375px;
  font-family: 'Lato', sans-serif;
}

.project-description {
  color: #B8B8B8;
  margin-top: 25px;
  font-size: 17px;
  font-weight: 300;
  font-family: serif;
  max-width: 1125px;
  letter-spacing: 1px;
  font-family: 'Open Sans', sans-serif;
}

.technology-list {
  font-family: 'Lato', sans-serif;
  text-transform: uppercase;
  margin-left: -40px;
  margin-top: 20px;
  margin-bottom: 100px;
}

.technology-used {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: #333333;
  color: #6D6D6D;
  border-radius: 4px;
  font-size: 10px;
  vertical-align: middle;
  letter-spacing: 1px;
  line-height: 30px;
  text-align: center;
  display: inline;
}

.project-live {
  left: 79%;
  position: absolute;
  border: 2px solid #32cd32;
  background-color: #1B1B1B;
  color: #32cd32;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  height: 40px;
  width: 6%;
  border-radius: 4px;
  letter-spacing: 4px;
  display: inline;
}

.project-demo {
  left: 72%;
  position: absolute;
  border: 2px solid #4d4dff;
  background-color: #1B1B1B;
  color: #4d4dff;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  height: 40px;
  width: 6%;
  border-radius: 4px;
  letter-spacing: 4px;
  display: inline;
}

.project-code {
  left: 79%;
  position: absolute;
  border: 2px solid #FD1C03;
  background-color: #1B1B1B;
  color: #FD1C03;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  height: 40px;
  width: 6%;
  border-radius: 4px;
  letter-spacing: 4px;
  display: inline;
}

.project-live:hover {
  background-color: #32cd32;
  color: white;
}

.project-demo:hover {
  background-color: #4d4dff;
  color: white;
}

.project-code:hover {
  background-color: #FD1C03;
  color: white;
}

.project-live:focus {
  outline: none;
}

.project-demo:focus {
  outline: none;
}

.project-code:focus {
  outline: none;
}

.project-screenshots-pc {
  position: relative;
  margin-left: 90px;
  margin-top: 35px;
}

.pc-img-lg {
  margin-left: 30px;
  position: relative;
  height: 60%;
  width: 60%;
  z-index: 0;
}

.pc-img-md {
  position: relative;
  margin-left: 110px;
  height: 50%;
  width: 50%;
  z-index: 1;
  top: -400px;
  left: 380px;
  box-shadow: 0px 0px 2px 2px #1B1B1B;
}

.pc-img-col-small {
  position: relative;
  height: 10.20%;
  width: 10.20%;
  left: 180px;
  z-index: 1;
}

.project-screenshots-mobile {
  position: relative;
  margin-left: 55px;
  margin-top: -25px;
  margin-bottom: 350px;
}

.mobile-img-layer00 {
  position: relative;
  display: inline;
  height: 25%;
  width: 25%;
}

.mobile-img-layer01 {
  position: relative;
  display: inline;
  margin-left: 100px;
  height: 25%;
  width: 25%;
}

.mobile-img-layer02 {
  position: relative;
  display: inline;
  margin-left: 100px;
  height: 25%;
  width: 25%;
}

/*                        */
/* Project Navigation Bar */
/*                        */
.project-nav {
  position: fixed;
  /*left: 93.5%;
  top: 25%;*/
  margin-left: 93.5%;
  margin-top: 18%;
  z-index: 1;
}

.project-nav-section {
  margin-top: 50px;
  height: 25px;
  width: 25px;
  opacity: 1;
}

.project-nav-section:hover {
  margin-top: 50px;
  height: 25px;
  width: 25px;
  opacity: .8;
}

.project-nav-section:focus {
  outline: none;
}

#project-nova-li-wrapper .project-nav-text {
  position: absolute;
  visibility: hidden;
  color: white;
  margin-left: -70%;
  margin-top: 52px;
  font-size: 14px;
  font-weight: 500;
  font-family: serif;
  max-width: 1125px;
  letter-spacing: 1px;
  font-family: 'Open Sans', sans-serif;
}

#project-nova-li-wrapper:hover .project-nav-text {
  visibility: visible;
}

#project-pattern-li-wrapper .project-nav-text {
  position: absolute;
  visibility: hidden;
  color: white;
  margin-left: -95%;
  margin-top: 52px;
  font-size: 14px;
  font-weight: 500;
  font-family: serif;
  max-width: 1125px;
  letter-spacing: 1px;
  font-family: 'Open Sans', sans-serif;
}
/* ... */

